--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router-dom": "^7.11.0",
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
