--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "lucide-react": "^0.562.0",
     "react-router-dom": "^7.11.0",
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3",
-    "vite": "^7.3.0",
-    "@vitejs/plugin-react": "^5.1.2"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
